--- a/AzureDevops-Demo-Scrum-Project/home.html
+++ b/AzureDevops-Demo-Scrum-Project/home.html
@@ -79,7 +79,7 @@
                            background-color: bisque;
                         }
         </style>
-<h1 align="center">Nitara</h1>
+<h1 align="center"><p>Nitara</p></h1>
 <h2 align="center">fashion with culture</h2>
 <body>
     <ul>
