--- a/AzureDevops-Demo-Scrum-Project/home.html
+++ b/AzureDevops-Demo-Scrum-Project/home.html
@@ -1,7 +1,7 @@
 <html>
     <style>
         *{ 
-          margin:0; padding0;
+          margin:0; padding:0;
           font-family: Times New Roman;
         }
         header{
